--- a/libs/not-found/src/lib/not-found-page/register.component.html
+++ b/libs/not-found/src/lib/not-found-page/register.component.html
@@ -1,6 +1,6 @@
 <!-- implements F010 -->
 <ng-container *ngIf="vm$ | async as vm">
-  <div *ngIf="!vm.isRegisterd; else registered">
+  <div *ngIf="!vm.isRegistered; else registered">
     <party-time-main-header title="Account erstellen" />
     <form (ngSubmit)="(onSubmit)" [formGroup]="registerForm">
       <div class="flex justify-center pl-12 pr-12 pt-12">
@@ -8,35 +8,20 @@
           <section>
             <party-time-primary-label label="Benutzername" />
             <div
-              class="mb-4 flex rounded-md shadow-sm ring-1 ring-inset ring-outline-variant-light dark:ring-outline-dark sm:max-w-md"
-            >
-              <input
-                name="username"
-                id="username"
-                autocomplete="username"
-                required
-                formControlName="name"
+              class="mb-4 flex rounded-md shadow-sm ring-1 ring-inset ring-outline-variant-light dark:ring-outline-dark sm:max-w-md">
+              <input name="username" id="username" autocomplete="username" required formControlName="name"
                 class="block flex-1 rounded-md border-0 bg-transparent py-1.5 pl-1 text-on-secondary-container-light placeholder:text-on-surface-variant-light focus:ring-1 dark:text-on-secondary-container-dark placeholder:dark:text-on-surface-variant-dark sm:text-sm sm:leading-6"
-                placeholder="z. B. PartyMani"
-              />
+                placeholder="z. B. PartyMani" />
             </div>
-            <div
-              *ngIf="f['name'].errors && (f['name'].dirty || f['name'].touched)"
-            >
+            <div *ngIf="f['name'].errors && (f['name'].dirty || f['name'].touched)">
               <div *ngIf="f['name'].errors['required']">
-                <party-time-primary-error
-                  error="Bitte gib einen Benutzernamen ein."
-                />
+                <party-time-primary-error error="Bitte gib einen Benutzernamen ein." />
               </div>
               <div *ngIf="f['name'].errors['minlength']">
-                <party-time-primary-error
-                  error="Der Benutzername muss mindestens 5 Zeichen lang sein."
-                />
+                <party-time-primary-error error="Der Benutzername muss mindestens 5 Zeichen lang sein." />
               </div>
               <div *ngIf="f['name'].errors['maxlength']">
-                <party-time-primary-error
-                  error="Der Benutzername darf maximal 30 Zeichen lang sein."
-                />
+                <party-time-primary-error error="Der Benutzername darf maximal 30 Zeichen lang sein." />
               </div>
             </div>
           </section>
@@ -44,33 +29,21 @@
           <section>
             <party-time-primary-label label="E-Mail" />
             <div
-              class="mb-4 flex rounded-md shadow-sm ring-1 ring-inset ring-outline-variant-light dark:ring-outline-dark sm:max-w-md"
-            >
-              <input
-                type="email"
-                name="email"
-                id="email"
-                autocomplete="email"
-                required
-                formControlName="email"
+              class="mb-4 flex rounded-md shadow-sm ring-1 ring-inset ring-outline-variant-light dark:ring-outline-dark sm:max-w-md">
+              <input type="email" name="email" id="email" autocomplete="email" required formControlName="email"
                 class="block flex-1 rounded-md border-0 bg-transparent py-1.5 pl-1 text-on-secondary-container-light placeholder:text-on-surface-variant-light focus:ring-1 dark:text-on-secondary-container-dark placeholder:dark:text-on-surface-variant-dark sm:text-sm sm:leading-6"
-                placeholder="z. B. manfred@partytime.com"
-              />
+                placeholder="z. B. manfred@partytime.com" />
             </div>
-            <div
-              *ngIf="
+            <div *ngIf="
                 f['email'].errors && (f['email'].dirty || f['email'].touched)
-              "
-            >
+              ">
               <div *ngIf="f['email'].errors['required']">
                 <party-time-primary-error
-                  error="Bitte gib deine E-Mail Adresse ein damit wir verifizieren können dass du eine echte Person bist und du dein Passwort zurücksetzen kannst."
-                />
+                  error="Bitte gib deine E-Mail Adresse ein damit wir verifizieren können dass du eine echte Person bist und du dein Passwort zurücksetzen kannst." />
               </div>
               <div *ngIf="f['email'].errors['email']">
                 <party-time-primary-error
-                  error="Bitte gib eine Valide E-Mail Adresse ein damit wir verifizieren können dass du eine echte Person bist. Es wird eine Verifizierung an diese Adresse gesendet."
-                />
+                  error="Bitte gib eine Valide E-Mail Adresse ein damit wir verifizieren können dass du eine echte Person bist. Es wird eine Verifizierung an diese Adresse gesendet." />
               </div>
             </div>
           </section>
@@ -78,49 +51,33 @@
           <section>
             <party-time-primary-label label="Passwort" />
             <div
-              class="mb-4 flex rounded-md shadow-sm ring-1 ring-inset ring-outline-variant-light dark:ring-outline-dark sm:max-w-md"
-            >
-              <input
-                type="password"
-                name="password"
-                id="password"
-                autocomplete=" new-password"
-                required
+              class="mb-4 flex rounded-md shadow-sm ring-1 ring-inset ring-outline-variant-light dark:ring-outline-dark sm:max-w-md">
+              <input type="password" name="password" id="password" autocomplete=" new-password" required
                 formControlName="password"
-                class="block flex-1 rounded-md border-0 bg-transparent py-1.5 pl-1 text-on-secondary-container-light placeholder:text-on-surface-variant-light focus:ring-1 dark:text-on-secondary-container-dark placeholder:dark:text-on-surface-variant-dark sm:text-sm sm:leading-6"
-              />
+                class="block flex-1 rounded-md border-0 bg-transparent py-1.5 pl-1 text-on-secondary-container-light placeholder:text-on-surface-variant-light focus:ring-1 dark:text-on-secondary-container-dark placeholder:dark:text-on-surface-variant-dark sm:text-sm sm:leading-6" />
             </div>
-            <div
-              *ngIf="
+            <div *ngIf="
                 f['password'].errors &&
                 (f['password'].dirty || f['password'].touched)
-              "
-            >
+              ">
               <div *ngIf="f['password'].errors['required']">
                 <party-time-primary-error error="Bitte gib ein Passwort ein." />
               </div>
               <div *ngIf="f['password'].errors['minlength']">
-                <party-time-primary-error
-                  error="Das Passwort muss mindestens 8 Zeichen lang sein."
-                />
+                <party-time-primary-error error="Das Passwort muss mindestens 8 Zeichen lang sein." />
               </div>
               <div *ngIf="f['password'].errors['maxlength']">
-                <party-time-primary-error
-                  error="Das Passwort darf maximal 30 Zeichen lang sein."
-                />
+                <party-time-primary-error error="Das Passwort darf maximal 30 Zeichen lang sein." />
               </div>
               <div *ngIf="f['password'].errors['pattern']">
                 <party-time-primary-error
-                  error='Das Passwort muss mindestens 1 Großbuchstaben enthalten. Das Passwort muss mindestens 1 Kleinbuchstaben enthalten. Das Passwort muss mindestens 1 Zahl enthalten. Das Passwort muss mindestens 1 Sonderzeichen (,!"§$%&/()=?[]\&#x007B;} und Leerzeichen) enthalten.'
-                />
+                  error='Das Passwort muss mindestens 1 Großbuchstaben enthalten. Das Passwort muss mindestens 1 Kleinbuchstaben enthalten. Das Passwort muss mindestens 1 Zahl enthalten. Das Passwort muss mindestens 1 Sonderzeichen (,!"§$%&/()=?[]\&#x007B;} und Leerzeichen) enthalten.' />
               </div>
             </div>
           </section>
 
           <div class="flex w-full place-content-end pt-7">
-            <div
-              class="inline-block w-full justify-center pt-2 text-left align-bottom"
-            >
+            <div class="inline-block w-full justify-center pt-2 text-left align-bottom">
               <party-time-primary-error [error]="vm.error?.error?.message" />
             </div>
 
@@ -136,12 +93,9 @@
   <ng-template #registered>
     <party-time-main-header title="Account erstellt" />
     <div class="flex justify-center pl-12 pr-12 pt-12">
-      <div
-        class="text-xl font-extrabold text-on-background-light dark:text-on-background-dark md:text-2xl lg:text-3xl"
-      >
+      <div class="text-xl font-extrabold text-on-background-light dark:text-on-background-dark md:text-2xl lg:text-3xl">
         <p
-          class="dark:from-on-secondary-dark-dark mb-1 bg-gradient-to-r from-primary-light to-tertiary-light bg-clip-text text-transparent dark:to-on-tertiary-dark"
-        >
+          class="dark:from-on-secondary-dark-dark mb-1 bg-gradient-to-r from-primary-light to-tertiary-light bg-clip-text text-transparent dark:to-on-tertiary-dark">
           Hey {{ vm.accountDTO?.name }}!
         </p>
         <p>
