--- a/libs/ui/src/lib/primary-button/login.component.html
+++ b/libs/ui/src/lib/primary-button/login.component.html
@@ -8,38 +8,65 @@
           <section>
             <party-time-primary-label label="E-Mail" />
             <div
-              class="mb-4 flex rounded-md shadow-sm ring-1 ring-inset ring-outline-variant-light dark:ring-outline-dark sm:max-w-md">
-              <input type="email" name="email" id="email" autocomplete="email" required formControlName="email"
-                class="block flex-1 rounded-md border-0 bg-transparent py-1.5 pl-1 text-on-secondary-container-light placeholder:text-on-surface-variant-light focus:ring-1 dark:text-on-secondary-container-dark placeholder:dark:text-on-surface-variant-dark sm:text-sm sm:leading-6" />
+              class="mb-4 flex rounded-md shadow-sm ring-1 ring-inset ring-outline-variant-light dark:ring-outline-dark sm:max-w-md"
+            >
+              <input
+                type="email"
+                name="email"
+                id="email"
+                autocomplete="email"
+                required
+                formControlName="email"
+                class="block flex-1 rounded-md border-0 bg-transparent py-1.5 pl-1 text-on-secondary-container-light placeholder:text-on-surface-variant-light focus:ring-1 dark:text-on-secondary-container-dark placeholder:dark:text-on-surface-variant-dark sm:text-sm sm:leading-6"
+              />
             </div>
-            <div *ngIf="
+            <div
+              *ngIf="
                 f['email'].errors && (f['email'].dirty || f['email'].touched)
-              ">
+              "
+            >
               <div *ngIf="f['email'].errors['required']">
-                <party-time-primary-error error="Bitte gib deine E-Mail Adresse ein." />
+                <party-time-primary-error
+                  error="Bitte gib deine E-Mail Adresse ein."
+                />
               </div>
             </div>
           </section>
           <section>
-            <party-time-primary-label label="Passwort"></party-time-primary-label>
+            <party-time-primary-label
+              label="Passwort"
+            ></party-time-primary-label>
             <div
-              class="mb-4 flex rounded-md shadow-sm ring-1 ring-inset ring-outline-variant-light dark:ring-outline-dark sm:max-w-md">
-              <input type="password" name="password" id="password" autocomplete="new-password" required
+              class="mb-4 flex rounded-md shadow-sm ring-1 ring-inset ring-outline-variant-light dark:ring-outline-dark sm:max-w-md"
+            >
+              <input
+                type="password"
+                name="password"
+                id="password"
+                autocomplete="new-password"
+                required
                 formControlName="password"
-                class="block flex-1 rounded-md border-0 bg-transparent py-1.5 pl-1 text-on-secondary-container-light placeholder:text-on-surface-variant-light focus:ring-1 dark:text-on-secondary-container-dark placeholder:dark:text-on-surface-variant-dark sm:text-sm sm:leading-6" />
+                class="block flex-1 rounded-md border-0 bg-transparent py-1.5 pl-1 text-on-secondary-container-light placeholder:text-on-surface-variant-light focus:ring-1 dark:text-on-secondary-container-dark placeholder:dark:text-on-surface-variant-dark sm:text-sm sm:leading-6"
+              />
             </div>
 
-            <div *ngIf="
+            <div
+              *ngIf="
                 f['password'].errors &&
                 (f['password'].dirty || f['password'].touched)
-              ">
+              "
+            >
               <div *ngIf="f['password'].errors['required']">
-                <party-time-primary-error error="Bitte gib dein Passwort ein." />
+                <party-time-primary-error
+                  error="Bitte gib dein Passwort ein."
+                />
               </div>
             </div>
           </section>
           <div class="flex w-full place-content-end pt-7">
-            <div class="inline-block w-full justify-center pt-2 text-left align-bottom">
+            <div
+              class="inline-block w-full justify-center pt-2 text-left align-bottom"
+            >
               <party-time-primary-error [error]="vm.error?.error?.message" />
             </div>
 
@@ -53,9 +80,12 @@
   </div>
   <ng-template #authenticated>
     <div class="grid h-screen place-items-center">
-      <div class="text-xl font-extrabold text-on-background-light dark:text-on-background-dark md:text-2xl lg:text-3xl">
+      <div
+        class="text-xl font-extrabold text-on-background-light dark:text-on-background-dark md:text-2xl lg:text-3xl"
+      >
         <p
-          class="dark:from-on-secondary-dark-dark mb-1 bg-gradient-to-r from-primary-light to-tertiary-light bg-clip-text text-transparent dark:to-on-tertiary-dark">
+          class="dark:from-on-secondary-dark-dark mb-1 bg-gradient-to-r from-primary-light to-tertiary-light bg-clip-text text-transparent dark:to-on-tertiary-dark"
+        >
           Hey!
         </p>
         <p>Du wurdest erfolgreich eingeloggt.</p>
