--- a/apps/party-time-backend/src/main/resources/mail/verify_account.mustache
+++ b/apps/party-time-backend/src/main/resources/mail/verify_account.mustache
@@ -5,9 +5,8 @@
     <meta charset="UTF-8">
     <style type="text/css">
         body {
-            background-color: #EDE7F6;
-            font-family: Arial, sans-serif;
-            color: #000;
+            font-family: ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+            background-color: rgba(251, 251, 255);
             font-size: 16px;
             line-height: 1.4;
             padding: 20px;
@@ -16,28 +15,32 @@
         }
 
         h1 {
-            color: #000;
-            font-size: 24px;
-            margin-top: 0;
-            text-align: center;
+            font-size: 3.75rem;
+            line-height: 1;
+            color: rgba(27, 27, 31, 1);
         }
 
         p {
             margin-bottom: 20px;
+            color: rgba(69, 70, 79, 1);
         }
 
         .btn {
-            display: inline-block;
-            background-color: #000;
-            color: #fff;
-            padding: 10px 20px;
-            text-decoration: none;
-            border-radius: 5px;
-        }
-
-        .btn:hover {
-            background-color: #555;
-            color: #fff;
+            padding-left: 1.25rem;
+            padding-right: 1.25rem;
+            height: 2.25rem;
+            cursor: pointer;
+            font-family: inherit;
+            font-size: 100%;
+            font-weight: inherit;
+            line-height: inherit;
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+            border-width: 0;
+            border-style: solid;
+            border-color: currentColor;
+            color: rgba(0, 22, 79, 1);
         }
     </style>
 </head>
