--- a/libs/event/src/lib/create/create-event.component.html
+++ b/libs/event/src/lib/create/create-event.component.html
@@ -136,7 +136,7 @@
 
           <section>
             <party-time-primary-label label="Datum" />
-            <input type="datetime-local" name="dateTime" id="dateTime" required formControlName="dateTime"
+            <input type="datetime-local" name="dateTime" step="1" id="dateTime" required formControlName="dateTime"
               class="block flex-1 rounded-md border-0 bg-transparent py-1.5 pl-1 text-on-secondary-container-light placeholder:text-on-surface-variant-light focus:ring-1 dark:text-on-secondary-container-dark placeholder:dark:text-on-surface-variant-dark sm:text-sm sm:leading-6" />
           </section>
 
