--- a/libs/event/src/lib/overview/overview.component.html
+++ b/libs/event/src/lib/overview/overview.component.html
@@ -1,4 +1,12 @@
 <!-- implements F016 -->
 <ng-container *ngIf="vm$ | async as vm">
+    <party-time-main-header title="Events überblicken" />
+    <section class="flex justify-center">
+        <div class="">
+            <ul class="divide-y divide-gray-200 dark:divide-gray-700" *ngFor="let event of vm.events">
+                <party-time-event-selector [event]="event"></party-time-event-selector>
+            </ul>
+        </div>
+    </section>
     <pre>{{ vm | json}}</pre>
 </ng-container>
