--- a/libs/event/src/lib/edit/edit-event.component.html
+++ b/libs/event/src/lib/edit/edit-event.component.html
@@ -238,6 +238,13 @@
               type="button"
               name="Ändern"
             />
+            <party-time-secondary-button
+              class="ml-2"
+              id="delete"
+              routerLink="/event/delete/{{ vm.event?.id }}"
+              type="button"
+              name="Löschen"
+            />
           </div>
         </div>
       </div>
